# cisd_43_final_project

./: README.md  main.ipynb  main.py  mongodb.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb  rapidminer-checkpoint.ipynb
